--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,14 +17,14 @@ jobs:
   
   jdk8:
     docker:
-      - image: cimg/openjdk:8.0.322
+      - image: cimg/openjdk:8.0-node
     environment:
         JVM_OPTS: -Xmx3200m
     steps: *build_steps
   
   jdk11:
     docker:
-      - image: cimg/openjdk:11.0.13
+      - image: cimg/openjdk:11.0-node
     environment:
         JVM_OPTS: -Xmx3200m
     steps: *build_steps
