--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.okta</groupId>
         <artifactId>okta-parent</artifactId>
-        <version>23</version>
+        <version>24</version>
     </parent>
 
     <groupId>com.okta.sdk</groupId>
@@ -34,12 +34,12 @@
     <inceptionYear>2017</inceptionYear>
 
     <properties>
-        <jackson.version>2.13.3</jackson.version>
-        <snakeyaml.version>1.30</snakeyaml.version>
+        <jackson.version>2.14.0-rc1</jackson.version>
+        <snakeyaml.version>1.33</snakeyaml.version>
         <bouncycastle.version>1.70</bouncycastle.version>
         <jjwt.version>0.11.5</jjwt.version>
-        <okta.sdk.previousVersion>8.2.1</okta.sdk.previousVersion>
-        <okta.commons.version>1.3.0</okta.commons.version>
+        <okta.sdk.previousVersion>10.0.0-beta</okta.sdk.previousVersion>
+        <okta.commons.version>1.3.2</okta.commons.version>
         <github.slug>okta/okta-sdk-java</github.slug>
     </properties>
 
@@ -293,7 +293,7 @@
                         <parameter>
                             <onlyModified>true</onlyModified>
                             <breakBuildOnBinaryIncompatibleModifications>false</breakBuildOnBinaryIncompatibleModifications>
-                            <breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>
+                            <breakBuildBasedOnSemanticVersioning>false</breakBuildBasedOnSemanticVersioning>
                             <postAnalysisScript>${root.dir}/src/japicmp/postAnalysisScript.groovy</postAnalysisScript>
                         </parameter>
                     </configuration>
