--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -38,6 +38,7 @@
         <dependency>
             <groupId>com.okta.sdk</groupId>
             <artifactId>okta-sdk-api</artifactId>
+            <version>10.0.1-beta-SNAPSHOT</version>
         </dependency>
          <dependency>
             <groupId>org.slf4j</groupId>
