--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ aliases:
   - &build_steps
     - checkout
     - run: java -version
+    - run: mvn clean install
     - run: ./mvnw clean install -Pci
     - run:
         when: on_fail
@@ -20,7 +21,6 @@ jobs:
       - image: cimg/openjdk:8.0-node
     environment:
         JVM_OPTS: -Xmx3200m
-    parallelism: 4
     steps: *build_steps
   
   jdk11:
@@ -28,7 +28,6 @@ jobs:
       - image: cimg/openjdk:11.0-node
     environment:
         JVM_OPTS: -Xmx3200m
-    parallelism: 4
     steps: *build_steps
 
 workflows:
