--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,7 @@ aliases:
   - &build_steps
     - checkout
     - run: java -version
-    - run: mvn clean install
-    - run: ./mvnw clean install -Pci | circleci tests glob "integration-tests/src/test/groovy/com/okta/sdk/tests/it/*IT.groovy" | circleci tests split --split-by=timings
+    - run: ./mvnw clean install -Pci | circleci tests split --split-by=timings
 
     - run:
         when: on_fail
