--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.okta.sdk</groupId>
         <artifactId>okta-sdk-root</artifactId>
-        <version>10.0.1-beta-SNAPSHOT</version>
+        <version>10.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -90,36 +90,6 @@
     </dependencies>
 
     <profiles>
-<!--        <profile>-->
-<!--            <id>okhttp</id>-->
-<!--            <activation>-->
-<!--                <property>-->
-<!--                    <name>!httpclient</name>-->
-<!--                </property>-->
-<!--            </activation>-->
-<!--            <dependencies>-->
-<!--                <dependency>-->
-<!--                    <groupId>com.okta.sdk</groupId>-->
-<!--                    <artifactId>okta-sdk-okhttp</artifactId>-->
-<!--                    <scope>runtime</scope>-->
-<!--                </dependency>-->
-<!--            </dependencies>-->
-<!--        </profile>-->
-<!--        <profile>-->
-<!--            <id>httpclient</id>-->
-<!--            <activation>-->
-<!--                <property>-->
-<!--                    <name>httpclient</name>-->
-<!--                </property>-->
-<!--            </activation>-->
-<!--            <dependencies>-->
-<!--                <dependency>-->
-<!--                    <groupId>com.okta.sdk</groupId>-->
-<!--                    <artifactId>okta-sdk-httpclient</artifactId>-->
-<!--                    <scope>runtime</scope>-->
-<!--                </dependency>-->
-<!--            </dependencies>-->
-<!--        </profile>-->
         <profile>
             <id>mock-server</id>
             <properties>
