--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
     <parent>
         <groupId>com.okta</groupId>
         <artifactId>okta-parent</artifactId>
-        <version>24</version>
+        <version>25</version>
     </parent>
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>10.0.1-beta-SNAPSHOT</version>
+    <version>10.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -66,12 +66,12 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>10.0.1-beta-SNAPSHOT</version>
+                <version>10.0.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>10.0.1-beta-SNAPSHOT</version>
+                <version>10.0.0-SNAPSHOT</version>
             </dependency>
 
             <!-- Other Okta Projects -->
@@ -101,14 +101,14 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>10.0.1-beta-SNAPSHOT</version>
+                <version>10.0.0-SNAPSHOT</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>10.0.1-beta-SNAPSHOT</version>
+                <version>10.0.0-SNAPSHOT</version>
             </dependency>
 
             <!-- Logging -->
