updated circle ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,21 +17,21 @@ jobs:
   
   jdk8:
     docker:
-      - image: cimg/openjdk:8.0.322
+      - image: cimg/openjdk:8.0.345-node
     environment:
       JVM_OPTS: -Xmx3200m
     steps: *build_steps
 
   jdk11:
     docker:
-      - image: cimg/openjdk:11.0.13
+      - image: cimg/openjdk:11.0.16-node
     environment:
       JVM_OPTS: -Xmx3200m
     steps: *build_steps
 
-  jdk18:
+  jdk17:
     docker:
-      - image: cimg/openjdk:18.0.1
+      - image: cimg/openjdk:17.0.4-node
     environment:
       JVM_OPTS: -Xmx3200m
     steps: *build_steps
@@ -41,4 +41,4 @@ workflows:
     jobs:
       - jdk8
       - jdk11
-      - jdk18
+      - jdk17
