--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ aliases:
     - checkout
     - run: java -version
     - run: circleci tests glob "integration-tests/src/test/groovy/com/okta/sdk/tests/it/**IT.groovy" | circleci tests split --split-by=timings
+    - run: ./mvnw clean install -Pci
     - run:
         when: on_fail
         command: cat integration-tests/target/failsafe-reports/*IT.txt
