--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ aliases:
     - run: mvn clean install -Dmaven.test.skip=true
     - run:
         command: |
-          ClassName=$(circleci tests glob "integration-tests/src/test/groovy/com/okta/sdk/tests/it/**IT.groovy" | circleci tests split --split-by=filesize | grep groovy | xargs -n 1 basename | sed -e 's/\.groovy$//' | tr '\n' ',' | sed 's/,*$//g')
+          ClassName=$(circleci tests glob "integration-tests/src/test/groovy/com/okta/sdk/tests/it/**IT.groovy" | grep -v ApplicationsIT | circleci tests split --split-by=filesize | grep groovy | xargs -n 1 basename | sed -e 's/\.groovy$//' | tr '\n' ',' | sed 's/,*$//g')
           echo $ClassName
           cd ./integration-tests
           mvn -Dtest=$ClassName test
@@ -27,7 +27,7 @@ jobs:
     environment:
         JVM_OPTS: -Xmx3200m
     resource_class: large
-    parallelism: 10
+    parallelism: 5
     steps: *build_steps
 
 workflows:
