--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ aliases:
     - run: mvn clean install -Dmaven.test.skip=true
     - run:
         command: |
-          ClassName=$(circleci tests glob "integration-tests/src/test/groovy/com/okta/sdk/tests/it/**IT.groovy" | grep -v ApplicationsIT | circleci tests split --split-by=filesize | grep groovy | xargs -n 1 basename | sed -e 's/\.groovy$//' | tr '\n' ',' | sed 's/,*$//g')
+          ClassName=$(circleci tests glob "integration-tests/src/test/groovy/com/okta/sdk/tests/it/**IT.groovy" | circleci tests split --split-by=filesize | grep groovy | xargs -n 1 basename | sed -e 's/\.groovy$//' | tr '\n' ',' | sed 's/,*$//g')
           echo $ClassName
           cd ./integration-tests
           mvn -Dtest=$ClassName test
@@ -30,7 +30,16 @@ jobs:
     parallelism: 5
     steps: *build_steps
 
+ jdk11:
+    docker:
+      - image: cimg/openjdk:11.0-node
+    environment:
+        JVM_OPTS: -Xmx3200m
+    parallelism: 5
+    steps: *build_steps
+
 workflows:
   build_and_test:
     jobs:
       - jdk8
+      - jdk11
