--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,16 @@ version: 2.1
 
 aliases:
 
-  - &build_steps
+ - &build_steps
     - checkout
     - run: java -version
-    - run: ./mvnw clean install -Pci
+    - run: mvn clean install -Dmaven.test.skip=true
+    - run:
+        command: |
+          ClassName=$(circleci tests glob "integration-tests/src/test/groovy/com/okta/sdk/tests/it/**IT.groovy" | circleci tests split --split-by=filesize | grep groovy | xargs -n 1 basename | sed -e 's/\.groovy$//' | tr '\n' ',' | sed 's/,*$//g')
+          echo $ClassName
+          cd ./integration-tests
+          mvn -Dtest=$ClassName test
     - run:
         when: on_fail
         command: cat integration-tests/target/failsafe-reports/*IT.txt
