--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
       - image: cimg/openjdk:8.0.345-node
     environment:
       JVM_OPTS: -Xmx3200m
+    parallelism: 5
     steps: *build_steps
 
   jdk11:
@@ -33,6 +34,7 @@ jobs:
       - image: cimg/openjdk:11.0.16-node
     environment:
       JVM_OPTS: -Xmx3200m
+    parallelism: 5
     steps: *build_steps
 
   jdk17:
@@ -40,11 +42,10 @@ jobs:
       - image: cimg/openjdk:17.0.4-node
     environment:
       JVM_OPTS: -Xmx3200m
+    parallelism: 5
     steps: *build_steps
 
 workflows:
   build_and_test:
     jobs:
       - jdk8
-      - jdk11
-      - jdk17
