--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,11 @@ aliases:
   - &build_steps
     - checkout
     - run: java -version
-    - run: mvn -T 10 clean install
+    - run: mvn clean install -Dmaven.test.skip=true
+    - run: 
+        command: |
+           circleci tests glob "integration-tests/src/test/groovy/com/okta/sdk/tests/it/**IT.groovy" | circleci tests split > /tmp/tests-to-run
+           mvn -Dtest=$(cat /tmp/tests-to-run) test
     - run:
         when: on_fail
         command: cat integration-tests/target/failsafe-reports/*IT.txt
@@ -18,6 +22,7 @@ jobs:
   jdk8:
     docker:
       - image: cimg/openjdk:8.0-node
+    parallelism: 10
     environment:
         JVM_OPTS: -Xmx3200m
     steps: *build_steps
@@ -25,6 +30,7 @@ jobs:
   jdk11:
     docker:
       - image: cimg/openjdk:11.0-node
+    parallelism: 10
     environment:
         JVM_OPTS: -Xmx3200m
     steps: *build_steps
