--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,16 +8,14 @@ aliases:
     - run: mvn clean install -Dmaven.test.skip=true
     - run: 
         command: |
-           TEST=$(circleci tests glob "integration-tests/src/test/groovy/com/okta/sdk/tests/it/**IT.groovy" | circleci tests split --split-by=timings)
-           mvn -Dtest=$TEST test
+           TEST=$(circleci tests glob "integration-tests/src/test/groovy/com/okta/sdk/tests/it/**IT.groovy" | circleci tests split --split-by=filesize)
+           mvn $TEST test
     - run:
         when: on_fail
         command: cat integration-tests/target/failsafe-reports/*IT.txt
     - run:
         when: on_fail
         command: cat integration-tests/target/failsafe-reports/*dump*
-    - store_test_results:
-        path: ~/mvn-test-results
 
 jobs:
   
