--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,9 +8,9 @@ aliases:
     - run: mvn clean install -Dmaven.test.skip=true
     - run: 
         command: |
-          TEST=$(circleci tests glob "integration-tests/src/test/groovy/com/okta/sdk/tests/it/**IT.groovy" | circleci tests split --split-by=filesize)
           cd ./integration-tests
-          mvn $TEST test
+          circleci tests glob "src/test/groovy/com/okta/sdk/tests/it/**IT.groovy" | circleci tests split > /tmp/tests-to-run
+          mvn $(cat /tmp/tests-to-run) test
     - run:
         when: on_fail
         command: cat integration-tests/target/failsafe-reports/*IT.txt
