--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
     <inceptionYear>2017</inceptionYear>
 
     <properties>
-        <jackson.version>2.14.0-rc1</jackson.version>
+        <swagger-annotations.version>1.6.7</swagger-annotations.version>
+        <jackson.version>2.14.0</jackson.version>
         <snakeyaml.version>1.33</snakeyaml.version>
         <bouncycastle.version>1.70</bouncycastle.version>
         <jjwt.version>0.11.5</jjwt.version>
