--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
     environment:
       JVM_OPTS: -Xmx3200m
     resource_class: large
-    parallelism: 4
+    parallelism: 3
     steps: *build_steps
 
   jdk11:
@@ -52,3 +52,5 @@ workflows:
   build_and_test:
     jobs:
       - jdk8
+      - jdk11
+      - jdk17
