--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2.1
 
+orbs:
+  platform-orb: okta/platform-helpers-general@1.2.0
+
 aliases:
 
   - &build_steps
@@ -21,7 +24,25 @@ aliases:
         command: cat integration-tests/target/failsafe-reports/*dump*
 
 jobs:
-  
+  cache-secrets:
+    machine: true
+    resource_class: okta/generic-linux-x86
+    environment:
+      VAULT_ADDR: https://vault.aue1e.saasure.net
+    steps:
+      - checkout
+      - run:
+          name: "Vault login"
+          command: |
+            vault login -method=userpass username=$vault_username password=$vault_password > /dev/null 2>&1
+      - general-platform-helpers/save-dependencies
+  load-secrets:
+    docker:
+      - image: cimg/openjdk:11.0
+    steps:
+      - checkout
+      - general-platform-helpers/load-dependencies
+
   jdk8:
     docker:
       - image: cimg/openjdk:8.0.345-node
@@ -52,6 +73,16 @@ jobs:
 workflows:
   build_and_test:
     jobs:
-      - jdk8
-      - jdk11
-      - jdk17
+      - cache-secrets
+      - load-secrets:
+          requires:
+            - cache-secrets
+      - jdk8:
+          requires:
+            - load-secrets
+      - jdk11:
+          requires:
+            - load-secrets
+      - jdk17:
+          requires:
+            - load-secrets
