--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ aliases:
 
   - &build_steps
     - checkout
+    - platform-orb/load-dependencies
     - run: java -version
     - run: mvn clean install -Dmaven.test.skip.exec=true
     - run: mvn test
