--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <snakeyaml.version>1.33</snakeyaml.version>
         <bouncycastle.version>1.70</bouncycastle.version>
         <jjwt.version>0.11.5</jjwt.version>
-        <okta.sdk.previousVersion>10.0.0-beta</okta.sdk.previousVersion>
+        <okta.sdk.previousVersion>10.1.0</okta.sdk.previousVersion>
         <okta.commons.version>1.3.2</okta.commons.version>
         <github.slug>okta/okta-sdk-java</github.slug>
     </properties>
@@ -292,8 +292,8 @@
                         </oldVersion>
                         <parameter>
                             <onlyModified>true</onlyModified>
-                            <breakBuildOnBinaryIncompatibleModifications>false</breakBuildOnBinaryIncompatibleModifications> <!-- TODO: revert to true after GA release (can remain false for beta releases) -->
-                            <breakBuildBasedOnSemanticVersioning>false</breakBuildBasedOnSemanticVersioning> <!-- TODO: revert to true after GA release (can remain false for beta releases) -->
+                            <breakBuildOnBinaryIncompatibleModifications>true</breakBuildOnBinaryIncompatibleModifications>
+                            <breakBuildBasedOnSemanticVersioning>true</breakBuildBasedOnSemanticVersioning>
                             <postAnalysisScript>${root.dir}/src/japicmp/postAnalysisScript.groovy</postAnalysisScript>
                         </parameter>
                     </configuration>
