--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>8.2.2</version>
+    <version>8.2.3-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -39,8 +39,8 @@
         <snakeyaml.version>1.32</snakeyaml.version>
         <bouncycastle.version>1.70</bouncycastle.version>
         <jjwt.version>0.11.5</jjwt.version>
-        <okta.sdk.previousVersion>8.2.1</okta.sdk.previousVersion>
-        <okta.commons.version>1.3.1</okta.commons.version>
+        <okta.sdk.previousVersion>8.2.2</okta.sdk.previousVersion>
+        <okta.commons.version>1.3.3</okta.commons.version>
 
         <github.slug>okta/okta-sdk-java</github.slug>
         <npm.exec.skip>false</npm.exec.skip> <!-- Set it to `true` to skip openAPI spec regeneration -->
@@ -73,27 +73,27 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>8.2.2</version>
+                <version>8.2.3-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>8.2.2</version>
+                <version>8.2.3-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-api-swagger-templates</artifactId>
-                <version>8.2.2</version>
+                <version>8.2.3-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-httpclient</artifactId>
-                <version>8.2.2</version>
+                <version>8.2.3-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-okhttp</artifactId>
-                <version>8.2.2</version>
+                <version>8.2.3-SNAPSHOT</version>
             </dependency>
 
             <!-- Other Okta Projects -->
@@ -132,14 +132,14 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>8.2.2</version>
+                <version>8.2.3-SNAPSHOT</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>8.2.2</version>
+                <version>8.2.3-SNAPSHOT</version>
             </dependency>
 
             <!-- Logging -->
@@ -364,7 +364,7 @@
                         <dependency>
                             <groupId>com.okta.sdk</groupId>
                             <artifactId>okta-api-swagger-templates</artifactId>
-                            <version>8.2.2</version>
+                            <version>8.2.3-SNAPSHOT</version>
                         </dependency>
                     </dependencies>
                 </plugin>
