--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>com.okta.sdk</groupId>
     <artifactId>okta-sdk-root</artifactId>
-    <version>10.2.1-SNAPSHOT</version>
+    <version>10.2.1</version>
     <packaging>pom</packaging>
 
     <name>Okta Java SDK</name>
@@ -66,12 +66,12 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-api</artifactId>
-                <version>10.2.1-SNAPSHOT</version>
+                <version>10.2.1</version>
             </dependency>
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-impl</artifactId>
-                <version>10.2.1-SNAPSHOT</version>
+                <version>10.2.1</version>
             </dependency>
 
             <!-- Other Okta Projects -->
@@ -101,14 +101,14 @@
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-integration-tests</artifactId>
-                <version>10.2.1-SNAPSHOT</version>
+                <version>10.2.1</version>
             </dependency>
 
             <!-- Examples -->
             <dependency>
                 <groupId>com.okta.sdk</groupId>
                 <artifactId>okta-sdk-examples-quickstart</artifactId>
-                <version>10.2.1-SNAPSHOT</version>
+                <version>10.2.1</version>
             </dependency>
 
             <!-- Logging -->
@@ -359,4 +359,8 @@
             </build>
         </profile>
     </profiles>
+
+  <scm>
+    <tag>okta-sdk-root-10.2.1</tag>
+  </scm>
 </project>
