--- a/api/pom.xml
+++ b/api/pom.xml
@@ -36,6 +36,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <swagger-annotations.version>1.6.8</swagger-annotations.version>
+        <openapi-generator.version>6.4.0</openapi-generator.version>
         <spring-web.version>5.3.23</spring-web.version>
         <spring-retry.version>1.3.3</spring-retry.version>
         <jackson-databind-nullable.version>0.2.3</jackson-databind-nullable.version>
@@ -136,7 +137,7 @@
         <dependency>
             <groupId>org.openapitools</groupId>
             <artifactId>openapi-generator</artifactId>
-            <version>6.2.0</version>
+            <version>${openapi-generator.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
@@ -167,7 +168,7 @@
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>6.2.0</version>
+                <version>${openapi-generator.version}</version>
                 <executions>
                     <execution>
                         <goals>
