--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -19829,6 +19829,8 @@ components:
           $ref: '#/components/schemas/PasswordCredential'
         oldPassword:
           $ref: '#/components/schemas/PasswordCredential'
+        revokeSessions:
+          type: boolean
     ChannelBinding:
       type: object
       properties:
