Add missing profile field in UserFactor

--- a/src/swagger/api.yaml
+++ b/src/swagger/api.yaml
@@ -25214,6 +25214,8 @@ components:
           type: string
           format: date-time
           readOnly: true
+        profile:
+          type: object
         provider:
           $ref: '#/components/schemas/FactorProvider'
         status:
