Added maven formatter plugin

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -231,6 +231,10 @@
                     </tags>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
