--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -147,21 +147,6 @@
         </resources>
 
         <plugins>
-            <!--            <plugin>-->
-            <!--                <groupId>org.zalando.maven.plugins</groupId>-->
-            <!--                <artifactId>swagger-codegen-maven-plugin</artifactId>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        <id>swagger-codegen-impl</id>-->
-            <!--                        <goals>-->
-            <!--                            <goal>codegen</goal>-->
-            <!--                        </goals>-->
-            <!--                        <configuration>-->
-            <!--                            <language>okta_java_impl</language>-->
-            <!--                        </configuration>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--            </plugin>-->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
@@ -178,6 +163,10 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
