--- a/pom.xml
+++ b/pom.xml
@@ -314,6 +314,24 @@
                         <ossindexAnalyzerEnabled>false</ossindexAnalyzerEnabled>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>net.revelc.code.formatter</groupId>
+                    <artifactId>formatter-maven-plugin</artifactId>
+                    <version>2.22.0</version>
+                    <configuration>
+                        <directories>
+                            <directory>${project.build.sourceDirectory}</directory>
+                            <directory>${project.build.directory}/generated-sources</directory>
+                        </directories>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>format</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
