--- a/api/pom.xml
+++ b/api/pom.xml
@@ -36,7 +36,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <swagger-annotations.version>1.6.8</swagger-annotations.version>
-        <openapi-generator.version>6.4.0</openapi-generator.version>
+        <openapi-generator.version>6.5.0</openapi-generator.version>
         <spring-web.version>5.3.23</spring-web.version>
         <spring-retry.version>1.3.3</spring-retry.version>
         <jackson-databind-nullable.version>0.2.3</jackson-databind-nullable.version>
@@ -77,16 +77,11 @@
             <version>${jsr305.version}</version>
         </dependency>
 
-        <!-- HTTP client: Spring RestTemplate -->
+        <!-- HTTP client: apache client -->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${spring-web.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring-web.version}</version>
+            <groupId>org.apache.httpcomponents.client5</groupId>
+            <artifactId>httpclient5</artifactId>
+            <version>5.2.1</version>
         </dependency>
 
         <!-- Spring Retry -->
@@ -155,6 +150,10 @@
                     <groupId>com.github.jknack</groupId>
                     <artifactId>handlebars</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.httpcomponents</groupId>
+                    <artifactId>httpclient</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
     </dependencies>
@@ -169,6 +168,19 @@
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
                 <version>${openapi-generator.version}</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.openapitools</groupId>
+                        <artifactId>openapi-generator</artifactId>
+                        <version>${openapi-generator.version}</version>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>org.apache.httpcomponents</groupId>
+                                <artifactId>httpclient</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <goals>
@@ -184,7 +196,7 @@
                             <generateModelTests>false</generateModelTests>
                             <generateApiTests>false</generateApiTests>
                             <templateDirectory>src/main/resources/custom_templates</templateDirectory>
-                            <library>resttemplate</library>
+                            <library>apache-httpclient</library>
                         </configuration>
                     </execution>
                 </executions>
@@ -242,6 +254,11 @@
                     <plugin>
                         <groupId>com.github.siom79.japicmp</groupId>
                         <artifactId>japicmp-maven-plugin</artifactId>
+                        <configuration>
+                            <parameter>
+                                <ignoreMissingClasses>true</ignoreMissingClasses>
+                            </parameter>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>japicmp</id>
